src/prompts/layouts/paging-window/header/Styles.css
.paging-window-header {
	display: flex;
	flex-direction: row;
	align-items: center;
	position: relative;
	position: sticky;
	border-bottom: 1px solid var(--border-grey-light);

	/* fight z-index in web app */
	z-index: 20;
	top: var(--prompt-paging-window-header-sticky-top, initial);

	--header-padding: 0.75rem;
}

.dismiss {
	display: inline-block;
	flex: 0 0 auto;
	position: relative;
	font-size: 2rem;
	color: #999;
	text-decoration: none;
	padding: 0.375rem var(--header-padding, 0.75rem);
	cursor: pointer;
}

.dismiss:hover {
	color: var(--secondary-grey);
}

.dismiss::after {
	content: '';
	display: block;
	position: absolute;
	top: 0.5rem;
	bottom: 0.5rem;
	left: auto;
	right: 0;
	width: 1px;
	background: var(--border-grey-light);
}

.title-container {
	flex: 1 1 auto;
	padding: 0 var(--header-padding, 0.75rem);
	overflow: hidden;
	display: flex;
	flex-direction: column;
}

.title {
	flex: 0 0 auto;
	font-size: 1.25rem;
	font-weight: 300;
	line-height: 1.35;
	color: var(--primary-grey);
}

.sub-title {
	flex: 0 0 auto;
	font-size: 0.625rem;
	font-weight: 600;
	line-height: 1.4;
	color: var(--tertiary-grey);
	text-transform: uppercase;
}

.progress-bar {
	position: absolute;
	top: 100%;
	left: 0;
	height: 2px;
	background: var(--secondary-green);
}

.paging-window-header.flat {
	& .dismiss {
		position: absolute;
		padding: 1px 0 0 1px;
		top: 7px;
		left: 24px;
		width: 30px;
		height: 30px;
		border-radius: 30px;
		background: var(--border-grey-light);
		display: inline-flex;
		justify-content: center;
		align-items: center;
		font-size: 1.5rem;

		&::after {
			display: none;
		}
	}

	& .title-container {
		text-align: center;
		padding: 0.625rem 3.75rem;
	}

	& .title {
		font-size: 1.125rem;
		font-weight: bold;
	}
}

@media (max-width: 480px) {
	.dismiss {
		position: absolute;
		top: 0;
		left: 0;
		bottom: 0;
		padding: 0.375rem;
		font-size: 1.5rem;
		display: inline-flex;
		justify-content: center;
		align-items: center;
	}

	.dismiss::after {
		display: none;
	}

	.title-container {
		padding: 10px 0 9px;
		text-align: center;
	}

	.title {
		font-size: 1rem;
		font-weight: 600;
	}

	.paging-window-header.flat {
		& .dismiss {
			top: 10px;
			width: 25px;
			height: 25px;
		}
	}
}

